modified front page

--- a/src/main/resources/templates/ai/direction_chat.html
+++ b/src/main/resources/templates/ai/direction_chat.html
@@ -81,61 +81,6 @@
     <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
-        <h5 class="mb-2">消息留言</h5>
-        <div class="row">
-          <div class="col-md-3 col-sm-6 col-12">
-            <div class="info-box">
-              <span class="info-box-icon bg-info"><i class="fa fa-envelope-o"></i></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">最新留言</span>
-                <span class="info-box-number">1,110</span>
-              </div>
-              <!-- /.info-box-content -->
-            </div>
-            <!-- /.info-box -->
-          </div>
-          <!-- /.col -->
-          <div class="col-md-3 col-sm-6 col-12">
-            <div class="info-box">
-              <span class="info-box-icon bg-success"><i class="fa fa-envelope-o"></i></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">历史留言</span>
-                <span class="info-box-number">410</span>
-              </div>
-              <!-- /.info-box-content -->
-            </div>
-            <!-- /.info-box -->
-          </div>
-          <!-- /.col -->
-          <div class="col-md-3 col-sm-6 col-12">
-            <div class="info-box">
-              <span class="info-box-icon bg-warning"><i class="fa fa-flag-o"></i></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">标记留言</span>
-                <span class="info-box-number">13,648</span>
-              </div>
-              <!-- /.info-box-content -->
-            </div>
-            <!-- /.info-box -->
-          </div>
-          <!-- /.col -->
-          <div class="col-md-3 col-sm-6 col-12">
-            <div class="info-box">
-              <span class="info-box-icon bg-danger"><i class="fa fa-star-o"></i></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">待办留言</span>
-                <span class="info-box-number">93,139</span>
-              </div>
-              <!-- /.info-box-content -->
-            </div>
-            <!-- /.info-box -->
-          </div>
-          <!-- /.col -->
-        </div>
         <!-- /.row -->
         <!-- Direct Chat -->
         <h4 class="mt-4 mb-2"></h4>
@@ -218,6 +163,20 @@
                   <td>小张</td>
                   <td><span class="badge bg-success">已回复</span></td>
                 </tr>
+                <tr>
+                  <td>
+                    <img th:src="@{/dist/img/default-150x150.png}" alt="Product 1" class="img-circle img-size-32 mr-2">
+                  </td>
+                  <td>小张</td>
+                  <td><span class="badge bg-success">已回复</span></td>
+                </tr>
+                <tr>
+                  <td>
+                    <img th:src="@{/dist/img/default-150x150.png}" alt="Product 1" class="img-circle img-size-32 mr-2">
+                  </td>
+                  <td>小张</td>
+                  <td><span class="badge bg-success">已回复</span></td>
+                </tr>
                 </tbody>
               </table>
             </div>
@@ -245,7 +204,7 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <!-- Conversations are loaded here -->
-                <div class="direct-chat-messages" style="height:420px;">
+                <div class="direct-chat-messages" style="height:530px;">
                   <!-- Message. Default to the left -->
                   <div class="direct-chat-msg right">
                     <div class="direct-chat-info clearfix">
