--- a/src/main/resources/templates/documents/stand_details.html
+++ b/src/main/resources/templates/documents/stand_details.html
@@ -83,140 +83,107 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <!--<div class="callout callout-info">
-              <h5><i class="fa fa-info"></i> Note:</h5>
-              This page has been enhanced for printing. Click the print button at the bottom of the invoice to test.
-            </div>-->
             <!-- Main content -->
-            <div class="invoice p-3 mb-3">
-              <!-- title row -->
-              <div class="row">
-                <div class="col-12">
-                  <h5>
-                    <i class="fa fa-globe"></i> 数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法
-                    <small class="float-right">更新时间: 2/8/2019</small>
-                  </h5>
+            <div class="col-md-12">
+              <div class="card card-primary card-outline">
+                <div class="card-header">
+                  <h3 class="card-title">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法更新
+                    <span class="mailbox-read-time float-right">2019年10月20日 1:45 下午</span>
+                  </h3>
                 </div>
-                <!-- /.col -->
-              </div>
-              <!-- info row -->
-              <div class="row invoice-info">
-                <div class="row col-sm-9">
-                  <div class="col-sm-6 invoice-col">
-                    <address>
-                      <br/>
-                      <strong>标准类型: </strong>
-                      <br>国家标准<br>
-                    </address>
+                <!-- /.card-header -->
+                <div class="card-body p-0">
+                  <!-- /.mailbox-read-info -->
+                  <div class="mailbox-controls with-border text-right">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Delete">
+                        <i class="fa fa-trash-o"></i></button>
+                      <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Reply">
+                        <i class="fa fa-reply"></i></button>
+                      <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Forward">
+                        <i class="fa fa-share"></i></button>
+                    </div>
+                    <!-- /.btn-group -->
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" title="Print">
+                      <i class="fa fa-print"></i></button>
                   </div>
-                  <div class="col-sm-3 invoice-col">
-                    <address>
-                      <br/>
-                      <strong>标准编号: </strong>
-                      <br>GY/T 248-2011<br>
-                    </address>
-                  </div>
-                  <div class="row col-sm-12">
-                    <div class="col-sm-6 row">
-                      <!-- /.col -->
-                      <div class="col-sm-9 invoice-col">
+                  <!-- /.mailbox-controls -->
+                  <div class="mailbox-read-message">
+                    <!-- info row -->
+                    <div class="row invoice-info">
+                      <div class="col-sm-3">
+                        <div class="row" style="padding-left: 10px;">
+                          <img  class="attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg">
+                        </div>
+                      </div>
+                      <div class="col-sm-3">
+                        <span class="mailbox-attachment-icon">
+                          <i class="fa fa-file-pdf-o"></i>
+                        </span>
+                        <div class="mailbox-attachment-info">
+                          <a href="#" class="mailbox-attachment-name"><i class="fa fa-paperclip"></i> 数字电影中档和流动放映系统版本1.pdf</a>
+                          <span class="mailbox-attachment-size">
+                          1,245 KB
+                          <a href="#" class="btn btn-default btn-sm float-right"><i class="fa fa-cloud-download"></i></a>
+                        </span>
+                        </div>
+                        <span class="mailbox-attachment-icon">
+                          <i class="fa fa-file-pdf-o"></i>
+                        </span>
+                        <div class="mailbox-attachment-info">
+                          <a href="#" class="mailbox-attachment-name"><i class="fa fa-paperclip"></i> 数字电影中档和流动放映系统版本2.pdf</a>
+                          <span class="mailbox-attachment-size">
+                          1,245 KB
+                          <a href="#" class="btn btn-default btn-sm float-right"><i class="fa fa-cloud-download"></i></a>
+                        </span>
+                        </div>
+                      </div>
+                      <div class="col-sm-6">
+                        <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">
+                        </video>
+                      </div>
+                    </div>
+                    <div class="row invoice-info">
+                      <div class="col-sm-3">
+                        <address>
+                          <br/>
+                          <strong>标准类型: </strong>
+                          <br>国家标准<br>
+                        </address>
+                      </div>
+                      <div class="col-sm-3">
+                        <address>
+                          <br/>
+                          <strong>标准编号: </strong>
+                          <br>GY/T 248-2011<br>
+                        </address>
+                      </div>
+                      <div class="col-sm-3">
                         <address>
                           <strong>主要内容：</strong><br>
                           规定了数字电影中档和流动放映系统用声频功率放大器的技术要求和测量方法。对于能够确保同样测量不确定度的任何等效测量方法也可以采用。有争议时，应以本标准为准。
                         </address>
                       </div>
-                      <!-- /.col -->
-                      <div class="col-sm-9 invoice-col">
-                        <address>
-<!--                          <strong>放映主管：</strong><br>-->
-<!--                          李四<br>-->
-<!--                          联系电话: 13000000000<br>-->
-<!--                          电子邮箱: tom.doe@example.com-->
-                        </address>
+                      <div class="col-sm-3">
+                        <!-- /.col -->
+                        <div class="invoice-col">
+                          <address>
+                            <strong>适用范围：</strong><br>
+                            适用于数字电影中档和流动放映系统的声频功率放大器的应用和检测。
+                          </address>
+                        </div>
                       </div>
-                      <!-- /.col -->
                     </div>
-                    <div class="col-sm-6 row">
-                      <!-- /.col -->
-                      <div class="col-sm-9 invoice-col">
-                        <address>
-                          <strong>适用范围：</strong><br>
-                          适用于数字电影中档和流动放映系统的声频功率放大器的应用和检测。
-                        </address>
                       </div>
-                      <!-- /.col -->
-                      <div class="col-sm-9 invoice-col">
-                        <address>
-<!--                          <strong>放映主管：</strong><br>-->
-<!--                          李四<br>-->
-<!--                          联系电话: 13000000000<br>-->
-<!--                          电子邮箱: tom.doe@example.com-->
-                        </address>
-                      </div>
-                      <!-- /.col -->
                     </div>
                   </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="row">
-                    <img src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg">
-                  </div>
+                  <!-- /.mailbox-read-message -->
                 </div>
               </div>
+              <!-- /. box -->
             </div>
-
-            <div class="invoice p-3 mb-3">
-              <!-- title row -->
-              <div class="row">
-                <div class="col-12">
-                  <h4>
-                    <small class="float-left">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</small>
-                    <small class="float-right">更新时间: 2/8/2019</small>
-                  </h4>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- info row -->
-              <div class="row form-group col-sm-12">&nbsp;</div>
-
-              <div class="row invoice-info">
-
-                <div class="col-sm-6 invoice-col">
-                  <strong>标准项目名称：</strong>
-                    <br>数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法 <br>
-                  <address>
-                  </address>
-                </div>
-                <!-- /.col -->
-                <div class="col-sm-3 invoice-col">
-                  <address>
-					<strong>标准编号：</strong>
-                    <br>GY/T 248-2011<br>
-                  </address>
-                </div>
-                <div class="col-sm-3 invoice-col">
-                  <img src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" >
-                </div>
-                <!-- /.col -->
-              </div>
-              <div class="row invoice-info">
-                <div class="col-sm-6 invoice-col">
-                  <address>
-                    <strong>主要内容：</strong>
-                    <br>规定了数字电影中档和流动放映系统用声频功率放大器的技术要求和测量方法。对于能够确保同样测量不确定度的任何等效测量方法也可以采用。有争议时，应以本标准为准。<br>
-                  </address>
-                </div>
-                <div class="col-sm-3 invoice-col">
-                  <address>
-                    <strong>适用范围：</strong>
-                    <br>适用于数字电影中档和流动放映系统的声频功率放大器的应用和检测。<br>
-                  </address>
-                </div>
-              </div>
-              <!-- /.row -->
-              <address></address>
-              </div>
-            </div>
+           </div>
+    </section>
             <!-- /.invoice -->
           </div><!-- /.col -->
         </div><!-- /.row -->
