--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -102,32 +102,7 @@
 <!--                    <i class="right fa fa-angle-left"></i>-->
                 </p>
             </a>
-<!--            <ul class="nav nav-treeview">-->
-<!--                <li class="nav-item">-->
-<!--                    <a href="/data_machine" class="nav-link">-->
-<!--                        <i class="fa fa-server nav-icon"></i>-->
-<!--                        <p>设备管理</p>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--            </ul>-->
         </li>
-<!--        <li class="nav-item">-->
-<!--            <a href="#" class="nav-link">-->
-<!--                <i class="nav-icon fa fa-wrench"></i>-->
-<!--                <p>-->
-<!--                    故障与维修管理-->
-<!--                    <i class="right fa fa-angle-left"></i>-->
-<!--                </p>-->
-<!--            </a>-->
-<!--            <ul class="nav nav-treeview">-->
-<!--                <li class="nav-item">-->
-<!--                    <a href="/chartjs_statistic" class="nav-link">-->
-<!--                        <i class="fa fa-thumb-tack nav-icon"></i>-->
-<!--                        <p>日常维护任务</p>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </li>-->
         <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-calendar"></i>
@@ -191,6 +166,15 @@
             </a>
         </li>
         <li class="nav-item">
+            <a href="/system/blank_api" class="nav-link">
+                <i class="nav-icon fa fa-table"></i>
+                <p>
+                    影院星级评定
+                    <!--<i class="fa fa-angle-left right"></i>-->
+                </p>
+            </a>
+        </li>
+        <li class="nav-item">
             <a href="/analysis/statistic_analysis" class="nav-link">
                 <i class="nav-icon fa fa-pie-chart"></i>
                 <p>
@@ -198,26 +182,6 @@
 <!--                    <i class="right fa fa-angle-left"></i>-->
                 </p>
             </a>
-<!--            <ul class="nav nav-treeview">-->
-<!--                <li class="nav-item">-->
-<!--                    <a href="/flot_analysis" class="nav-link">-->
-<!--                        <i class="fa fa-plug nav-icon"></i>-->
-<!--                        <p>API接口数据统计</p>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a href="/flot_analysis" class="nav-link">-->
-<!--                        <i class="fa fa-times-circle-o nav-icon"></i>-->
-<!--                        <p>故障统计</p>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a href="/chartjs_statistic" class="nav-link">-->
-<!--                        <i class="fa fa-thumb-tack nav-icon"></i>-->
-<!--                        <p>日常维护任务统计</p>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--            </ul>-->
         </li>
         <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
