--- a/src/main/resources/templates/documents/standard.html
+++ b/src/main/resources/templates/documents/standard.html
@@ -143,38 +143,13 @@
               <div class="row form-group col-12">
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
-                    <img class="img-responsive" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
-                    <p style="padding: 10px;height: 65px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
-                    <div class="form-group row">
-                      <div class="col-11">
-                        <p style="padding-left: 10px;">
-                          <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
-                        </p>
-                      </div>
-                    </div>                  </div>
-                </div>
-                <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
-                    <img class="img-responsive" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
-                    <p style="padding: 10px;height: 65px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
-                    <div class="form-group row">
-                      <div class="col-11">
-                        <p style="padding-left: 10px;">
-                          <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
-                        </p>
-                      </div>
+                    <div style="padding-left:40px; padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
                     </div>
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div style="padding: 0px;border:1px solid rgb(220,220,220);height: 440px;width: 100%;">
-                    <img class="img-responsive" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
-                    <p style="padding: 10px;height: 65px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
+                    <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
                     <div class="form-group row">
                       <div class="col-11">
-                        <p style="padding-left: 10px;">
+                        <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
                           <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
@@ -184,11 +159,48 @@
                 </div>
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
-                    <img class="img-responsive" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
-                    <p style="padding: 10px;height: 65px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
+
+                    <div style="padding-left:40px; padding-top:10px;">
+                    <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                    </div>
+                    <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
                     <div class="form-group row">
                       <div class="col-11">
-                        <p style="padding-left: 10px;">
+                        <p style="padding-left: 10px; padding-bottom: 30px;">
+                          <span style="float: left;">2018-03-24 07:15</span>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-3">
+                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
+
+                    <div style="padding-left:40px; padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                    </div>
+                    <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
+                    <div class="form-group row">
+                      <div class="col-11">
+                        <p style="padding-left: 10px; padding-bottom: 30px;">
+                          <span style="float: left;">2018-03-24 07:15</span>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-3">
+                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
+
+                    <div style="padding-left:40px; padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                    </div>
+                    <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
+                    <div class="form-group row">
+                      <div class="col-11">
+                        <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
                           <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
