modified the front index page

--- a/src/main/resources/templates/model/topper.html
+++ b/src/main/resources/templates/model/topper.html
@@ -24,6 +24,15 @@
     </li>
 </div>
 
+
+<div th:fragment="topper-phone">
+    <li class="nav-item">
+        <a class="nav-link"  href="http://218.241.227.182/static/index.html" target="_blank">
+            <i class="fa fa-mobile-phone"></i>
+        </a>
+    </li>
+</div>
+
 <div th:fragment="topper-info">
     <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown" href="#">
