modified analysis page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -806,7 +806,7 @@
 <!-- OPTIONAL SCRIPTS -->
 <script th:src="@{/plugins/chart.js/Chart.min.js}"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
-<script th:src="@{/dist/js/china.js}"></script>
+<script th:src="@{/dist/js/abc_china.js}"></script>
 <script>
     function randomData() {
         return Math.round(Math.random()*500);
