--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -60,7 +60,7 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a class="nav-link">
                 <i class="nav-icon fa fa-th"></i>
                 <p>
                     基础信息配置
@@ -104,7 +104,7 @@
             </a>
         </li>
         <li class="nav-item has-treeview">
-            <a href="#" class="nav-link">
+            <a class="nav-link">
                 <i class="nav-icon fa fa-calendar"></i>
                 <p>
                     计划任务
@@ -175,7 +175,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="/analysis/statistic_analysis" class="nav-link">
+            <a href="/analysis/chart_statistic" class="nav-link">
                 <i class="nav-icon fa fa-pie-chart"></i>
                 <p>
                     业务统计分析
